crud-user-app/Kuber/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mantogin-crud-user-app
  labels:
    app: mantogin-crud-user-app
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      env: local
  template:
    metadata:
      labels:
        env: local
    spec:
      containers:
        - name: mantogin-crud-user-app
          image: mantogin/mantogin-crud-user-app:2.0.0
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: config
              mountPath: "/config"
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: config-map
