crud-user-app/Kuber/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: load-balancer
spec:
  selector:
    env: local
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
