crud-user-app/Kuber/load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: load-balancer
  labels:
    app: load-balancer
spec:
  selector:
    env: local
#    app: load-balancer
  ports:
    - protocol: TCP
      name: metrics
      port: 80
      targetPort: 8000
  type: LoadBalancer
